--- a/data analysis/data-analysis-for-tiktok-trends.ipynb
+++ b/data analysis/data-analysis-for-tiktok-trends.ipynb
@@ -12397,7 +12397,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "tiktok_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -12411,7 +12411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
